Route 2/go-route2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment-route2
  namespace: route2
spec:
  selector:
    matchLabels:
      app: go-route2
  replicas: 2 
  template:
    metadata:
      labels:
        app: go-route2
    spec:
      containers:
      - name: go-rest-route2
        image: akashsawan/route2
        ports:
        - containerPort: 8080
