Route 2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-route2-service
  namespace: route2
  labels :
    app: go-route2
spec:
  selector:
    app: go-route2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
