Route 2/Ingress-route2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: route2
  name: ingress-go-route2
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: learning.kubernetes
    alb.ingress.kubernetes.io/group.order: '1'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /route2
            backend:
              service:
                name: go-route2-service
                port:
                  number: 80
